<resources>
    <string name="app_name">VisitingCardApp</string>
    <string name="madiha_mallick">MADIHA MALLICK</string>
    <string name="cse_undergrad">CSE undergrad</string>
    <string name="_91_7044579043">+91 7044579043</string>
    <string name="mallickmadiha9031_gmail_com">mallickmadiha9031@gmail.com</string>
    <string name="west_bengal_india">West Bengal, INDIA</string>
    <string name="madihamallick_github_io">madihamallick.github.io/</string>
</resources>